<resources>
    <string name="app_name">Android-App</string>
    <string name="luminosity">Luminosity</string>
    <string name="contrast">Contrast</string>
    <string name="histogram_eq">Histogram Equalization</string>
    <string name="filters">Filters</string>
    <string name="convolution">Convolution</string>
    <string name="reset">Reset</string>
    <string name="save_pic">Save Picture</string>

</resources>
